--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>this is a header</h1>
         <p>this is a paragraph</p>
+        <p>This is my second paragraph</p>
     </body>
 </html>
